--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <tr>
       <td><img src="images/gene.jpg" alt="Gene Profile Picture"></td>
       <td><H1>Gene Wiggins</H1>
-      <p><em>Founder and CTO of the <strong><a href="https://www.appbrewery.co/">Dev App Foundry</a></strong></em></p>
+      <p><em>Founder and CTO of <strong><a href="https://www.genewiggins.com/">GeneWiggins.com</a></strong></em></p>
       <p>I am a husband and father to two beautiful daughters.<br>
         I'm learning web development, I ♥ coffee, gardening and I make my own whiskeys.</p>
     </td>
