--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <div class="profile">
       <img src="./images/gene.jpg" alt="my-profile-image">
       <h2>Hello.</h2>
-      <p class="profile-description"><em>I am a Full Stack Website Developer. I'm Founder and Author of the <strong><a class="website" href="https://www.genewiggins.com/">Tech Hiker Fan Site.</a></strong></em> Java is my goto drink and I distill my own spirits.</p>
+      <p class="profile-description"><em>I am a Full Stack Website Developer. I'm Founder and Author of the <strong><a class="website" href="https://www.genewiggins.com/">Tech Hiker Fan Site.</a></strong></em> Java is my goto drink and I distill my
+        own spirits.</p>
     </div>
     <hr>
     <div class="skills">
@@ -30,12 +31,30 @@
       <div class="skill-row">
         <img class="code-image" src="./images/coding.jpg" alt="my-skills-image">
         <h3>Design & Development</h3>
-        <p>At a young age, I was instinctively curious how things worked. Much to my mother's dismay, I'd dissasemble items around the house attempting to understand how they worked and then reassemble them. This grew into a natural gravitation to computers and the technologies that made them run. My father was truely amazed one night when, after three hours, a technician couldn't get a memory module to work in his $3000 workstation but after he left, I got it working in 20 mins. This was the early 80's when things weren't plug and play. It was then that I knew computer and coding was the thing for me. I had a natural talent to understand how computers and its technology operated and I had a desire to make them run better. Over time, I have gained a wealth of information into all aspects of technology and have used that wisdom wisely. Web Development is just one important passion of mine.</p>
+        <p>At a young age, I was instinctively curious how things worked. Much to my mother's dismay, I'd dissasemble items around the house attempting to understand how they worked and then reassemble them. This grew into a natural gravitation to
+          computers and the technologies that made them run. My father was truely amazed one night when, after three hours, a technician couldn't get a memory module to work in his $3000 workstation but after he left, I got it working in 20 mins.
+          This was the early 80's when things weren't plug and play. It was then that I knew computer and coding was the thing for me. I had a natural talent to understand how computers and its technology operated and I had a desire to make them run
+          better. Over time, I have gained a wealth of information into all aspects of technology and have used that wisdom wisely. Web Development is just one important passion of mine.</p>
       </div>
       <div class="skill-row">
         <img class="spirits-image" src="./images/spirit.gif" alt="spirit-gif">
         <h3>Spirit Challenge</h3>
-        <p>No. I'm not talking about ghosts and poltergeists. I started my quest in making my own alcohol by first learning to brew my own beer. At first it was just a hobby that became an obsession in creating a perfectly unique type of micro-brew. However, as times changed my preferences changed as well. I became interested in what gave each type of alcohol it attributes and in so doing I began experimenting in infusing flavors into custom liquors. I still make some alcohol not for human consumption but mainly for propulsion and combustion.  <color: yellow>😁</color></p>
+        <p>No. I'm not talking about ghosts and poltergeists. I started my quest in making my own alcohol by first learning to brew my own beer. At first it was just a hobby that became an obsession in creating a perfectly unique type of micro-brew.
+          However, as times changed my preferences changed as well. I became interested in what gave each type of alcohol it attributes and in so doing I began experimenting in infusing flavors into custom liquors. I still make some alcohol not for
+          human consumption but mainly for propulsion and combustion. <color: yellow>😁</color>
+        </p>
+      </div>
+      <div class="skill-row">
+        <img class="backpack-image" src="./images/backpack.jpg" alt="backpacking-gif">
+        <h3>Backpacking</h3>
+        <p>
+          Among other interests, I revel in spending time in the outdoors not just recreationally but maintaining the many
+          local, state and national trail systems. I've volunteered as a cartographer, read and interpreted map coordinates, helped
+          maintain park corridors (park boundaries), and helped build natural stone steps and bridges from local boulders using sledgehammers
+          wedges and impact drills.<br><br>
+          Our municipal, county, state and national parks are a treasure that we need to appreciate and protect because, once they're gone
+          they'll never come back. Help support your local and national parks.
+        </p>
       </div>
     </div>
     <hr>
@@ -52,7 +71,7 @@
     <a class="footer-link" href="https://www.linkedin.com/in/genewiggins325/">LinkedIn</a>
     <a class="footer-link" href="https://www.facebook.com/william.gene.325/">Facebook</a>
     <a class="footer-link" href="http://www.genewiggins.com/">Website</a>
-    <p class="copywrite">© 2018  Gene Wiggins.</p>
+    <p class="copywrite">© 2018 Gene Wiggins.</p>
   </div>
 </body>
 
