--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/in/genewiggins325/">LinkedIn</a>
     <a class="footer-link" href="https://www.facebook.com/william.gene.325/">Facebook</a>
-    <a class="footer-link" href="http://www.genewiggins.com/">Website</a>
+    <a class="footer-link" href="http://www.genewiggins.com/">My Blog</a>
     <p class="copywrite">© 2018 Gene Wiggins.</p>
   </div>
 </body>
